--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9360,11 +9360,11 @@
                     let translatorLine = '';
                     if (translatorNameRaw) {
                         const normalized = normalizeTranslatorName(translatorNameRaw);
-                        let labelKey = 'الفريق';
+                        let labelKey = 'ترجمة فريق';
                         if (normalized) {
                             for (const token of INDIVIDUAL_TRANSLATOR_TOKENS) {
                                 if (normalized.includes(token)) {
-                                    labelKey = 'المترجم';
+                                    labelKey = 'ترجمة';
                                     break;
                                 }
                             }
