--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9361,7 +9361,12 @@
                     if (translatorNameRaw) {
                         const normalized = normalizeTranslatorName(translatorNameRaw);
                         let labelKey = 'ترجمة فريق';
+                        const categoryForTranslator = String(itemRef?.EpisodeCategory ?? '').trim();
                         if (normalized) {
+                            if (normalized.includes(normalizeTranslatorName('Spacetoon'))) {
+                                if (categoryForTranslator === 'D') labelKey = 'دبلجة';
+                                else if (categoryForTranslator === 'S') labelKey = 'ترجمة';
+                            }
                             for (const token of INDIVIDUAL_TRANSLATOR_TOKENS) {
                                 if (normalized.includes(token)) {
                                     labelKey = 'ترجمة';
