--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -9191,10 +9191,11 @@
                         const partNumber = idx + 1;
                         const ordinal = this.getArabicOrdinalNumberText(partNumber);
                         const isCurrent = this.normalizeEpisodeIdentifier(ep.EpisodeNumber) === normalizedCurrent;
-                        const text = `الجزء ${ordinal}${isCurrent ? ' ✅' : ''}`;
+                        const text = `الجزء ${ordinal}`;
                         const code = this.normalizeEpisodeIdentifier(ep?.EpisodeNumber);
                         return [{
                             text,
+                            style: isCurrent ? 'success' : 'primary',
                             web_app: { url: `${WEB_APP_URL}?code=${encodeURIComponent(code)}` }
                         }];
                     });
