--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -3,7 +3,7 @@
 <head>
     <script src="https://cdn.lgrckt-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
     <script>
-       window.LogRocket && window.LogRocket.init('pfmsbg/dcrefbot');
+       window.LogRocket && window.LogRocket.init('hitfhq/dcref-emt');
     </script>
     <script src="https://www.unpkg.com/@hyperdx/browser@0.21.0/build/index.js"></script>
     <script>
@@ -3842,7 +3842,7 @@
                     episode: { status: null },
                     movie: { status: null },
                     ep: 1191,
-                    mangaCh: 1158,
+                    mangaCh: 1159,
                     jumpCycleState: null,
                     // Ads Rows
                     showEpisodeAds: false,
@@ -12651,4 +12651,5 @@
     </style>
 </body>
 </html>
+
 
